--- a/sass/phone.scss
+++ b/sass/phone.scss
@@ -612,8 +612,8 @@ $text-font: Roboto;
         font-size: 30px;
         color: gray;
         position: absolute;
-        right: 32px;
-        /* margin: 255px 410px; */
+        right: 35px;
+        //  margin: 255px 410px; 
         opacity: 1;
     }
 
@@ -621,7 +621,7 @@ $text-font: Roboto;
         width: auto;
         font-size: 30px;
         position: absolute;
-        right: 32px;
+        right: 35px;
         opacity: 0;
         // margin: 255px 410px;
 
